--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
   "manifest_version": 3,
   "name": "纸上谈币 (Paper Trading) - GMGN模拟交易",
-  "version": "1.1",
+  "version": "1.3",
   "description": "第三方GMGN模拟交易工具。在gmgn.ai上进行演练，本地追踪盈亏，不涉及真实资产。",
   "permissions": [
-    "storage",
-    "tabs"
+    "storage"
   ],
   "host_permissions": [
     "*://gmgn.ai/*"
@@ -14,11 +13,11 @@
     "default_popup": "popup.html",
     "default_title": "打开纸上谈币设置",
     "default_icon": {
-      "128": "icon.png"
+      "128": "icon-128.png"
     }
   },
   "icons": {
-    "128": "icon.png"
+    "128": "icon-128.png"
   },
   "content_scripts": [
     {
